# norug-fun

./: .gitignore  Anchor.toml  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.cursor/rules/: create-anchor-test.mdc  data-fetching.mdc  issue-doc-request.mdc  issue-feature-request.mdc  project-structure.mdc  pull-request-template.mdc  rust-program-standards.mdc  security.mdc  skills.mdc  (+1 more)
.github/: dependabot.yml
crank/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
front/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  jest.config.js  jest.setup.js  junit.xml  middleware.ts  next.config.mjs  nyc.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vercel.json
programs/: Anchor.toml  package-lock.json  package.json  test.results
programs/programs/programs/: Cargo.toml
programs/programs/programs/src/: constants.rs  error.rs  lib.rs
programs/programs/programs/src/instructions/: check_and_end_epochs.rs  check_epoch_end.rs  create_epoch_task.rs  create_token_proposal.rs  end_epoch.rs  get_epoch_state.rs  get_proposal_details.rs  initialize_program_config.rs  initialize_treasury.rs  manage_treasury_role.rs  mark_epoch_processed.rs  mod.rs  reclaim_support.rs  start_epoch.rs  support_proposal.rs  update_proposal.rs  update_proposal_status.rs
programs/programs/programs/src/state/: mod.rs
programs/programs/programs/src/utils/: fee_distribution.rs  mod.rs
proxy-solana/: package-lock.json  package.json  server.js
(+201 files in other folders)
